--- a/package.json
+++ b/package.json
@@ -1,18 +1,5 @@
 {
-  "name": "stranka",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
-    "vite": "^4.3.9"
-  },
-  "dependencies": {
-    "swup": "^4.5.2"
+    "tailwindcss": "^3.4.1"
   }
 }
